c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_member_initializer.c
struct a {
    // structure members cannot have initializers
    int member = 1;
};